# armci-mpi

./: .travis.yml  CHANGES  COPYRIGHT  DEBUGGING.md  GA_TESTS  Makefile  Makefile.am  NOTES  NWCHEM_README  PROFILING.md  README  README.md  TODO  TOOLS_README  VERSION  armci.h  armci_malloc.c  armci_msg.c  armci_msg.h  armci_onesided.c  armci_onesided_nb.c  armcix.h  check.pbs  configure.ac  debug.c  debug.h  group_partition.c  groups.c  malloc.c  mem_region.c  mem_region.h  message.c  message_gop.c  mutex.c  mutex_grp_notify.c  mutex_grp_spin.c  onesided.c  onesided_nb.c  rmw.c  rmw_perf.c  (+7 more)
.github/workflows/: github_actions.yml
benchmarks/: Makefile  Makefile.mk  armci-perf.c  bench.pbs  contiguous-bench.c  onesided-bench.c  ping-pong-mpi.c  ping-pong.c  ring-flood.c  rmw_perf.c  strided-bench.c
include/: armci.h  armci_msg.h  armcix.h
m4/: CHECKOUT
profiler/: Makefile  profiling.c
src/: armci-memdev.c  armci.h  armci_internals.h  armcix.h  buffer.c  conflict_tree.c  conflict_tree.h  copypaste.c  debug.c  debug.h  gmr-extras.c  gmr.c  gmr.h  groups.c  init_finalize.c  internals.c  malloc.c  mem_region.c  mem_region.h  message.c  message_gop.c  mutex.c  mutex_grp_notify.c  mutex_grp_spin.c  mutex_hdl_queue.c  mutex_hdl_spin.c  onesided.c  onesided_nb.c  parmci.c  profiling.c  rmw.c  strided.c  strided_nb.c  topology.c  util.c  value_ops.c  vector.c  vector_nb.c
tests/: ARMCI_AccS_latency.c  ARMCI_PutAccS_latency.c  ARMCI_PutS_latency.c  Makefile  Makefile.mk  armci_acc_test_types.h  test_acc_overlap.c  test_accs.c  test_accs_dla.c  test_assert.c  test_group_partition.c  test_group_split.c  test_groups.c  test_igop.c  test_location_consistency.c  test_malloc.c  test_malloc_group.c  test_malloc_irreg.c  test_mutex.c  test_mutex_contention.c  test_mutex_rmw.c  test_mutex_trylock.c  test_onesided.c  test_onesided_shared.c  test_onesided_shared_dla.c  test_parmci_lib.c  test_puts.c  test_puts_gets.c  test_puts_gets_dla.c  test_putv.c  test_rmw_fadd.c  test_rmw_fadd_perf.c  test_win_create.c
tests-contrib/: Makefile.mk
tests-contrib/armci_test/: Makefile.mk
tests-contrib/cg/: Makefile.mk
tests-contrib/lu/: Makefile.mk
tests-contrib/non-blocking/: Makefile.mk
tests-contrib/transp1D/: Makefile.mk
tests/armci_test/: Makefile  Makefile.mk  test.c
tests/cg/: Makefile  Makefile.mk  cg_timing.c  read_input.c
tests/contrib/: LICENSE  Makefile.mk  armci-perf.c  armci-test.c
tests/contrib/armci_test/: Makefile.mk
tests/contrib/cg/: Makefile.mk  cg.c
tests/contrib/lu/: Makefile.mk  lu-b-bc.c  lu-block.c  lu.c
tests/contrib/non-blocking/: Makefile.mk  overlap.c  simple.c
tests/contrib/transp1D/: Makefile.mk
tests/ctree/: ctree_test.c  ctree_test_rand.c  ctree_test_rand_interval.c
tests/lu/: Makefile  Makefile.mk  lu-b-bc.c  lu-block.c  lu_timing.c
tests/memapi/: Makefile.mk  hello.c
tests/mpi/: Makefile.mk  ping-pong-mpi.c  test_dt.c  test_mpi_accs.c  test_mpi_dim.c  test_mpi_indexed_accs.c  test_mpi_indexed_gets.c  test_mpi_indexed_puts_gets.c  test_mpi_subarray_accs.c  test_win_create.c  test_win_model.c
tests/non-blocking/: Makefile  Makefile.mk  overlap.c
tests/non-blocking/overlap/: Makefile  overlap.c
tests/non-blocking/simple/: Makefile  simple.c
tests/transp1D/: Makefile  Makefile.mk  transp1D-c.c
tests/vmem/: Makefile.mk
travis/: build-run.sh  install-autotools.sh  install-deps.sh  install-mpi.sh
validation/: ACCUMULATE-GRANULARITY.md  LATEST-DEFAULT-45-VALIDATION.md
validation/request-rma-matrix/: DEFAULT-PRODUCTION-VALIDATION.md  DEFERRED-MPICH-OFI-RPUT-MCVE.md  FOCUSED-RMA-SWEEP-2026-07-23.md  MPI-RMA-BUG-REPORTS.md  MPICH5-OFI-RPUT-BUG-REPORT.md  MPICH5-UCX-RGET-DERIVED-BUG-REPORT.md  OPENMPI5-UCX-RPUT-BUG-REPORT.md  OPENMPI6-OFI-WIN-ALLOCATE-BUG-REPORT.md  README.md  ROOT-CAUSE-RESULTS.md  build-focused-tests.sh  build-libfabric-rome.sbatch  build-matrix.sh  run-armci-diagnostic.sbatch  run-focused-tests.sbatch  run-matrix.sbatch  run-mcve.sbatch  submit-focused-tests.sh  submit-matrix.sh  summarize-matrix.sh
validation/request-rma-matrix/mcve/: README.md  armci-request-depth.c  mpich-ofi-rput-minimal.c  mpich-ucx-rget-vector.c  ompi-ofi-win-allocate.c  ompi-ucx-rput-minimal.c  rput-indexed.c  rput-many.c  swap-lock.c
